--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week2-TS",
+  "name": "week3-TS",
   "version": "1.0.0",
   "description": "Week 2",
   "main": "index.js",
@@ -31,6 +31,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "sass": "^1.58.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
